Resolves issue 134 : Most of the code has now been converted to use DistributableParts and Groups : The following sections of code still need to be converted: exporter, grade reports view, dist lookup view. These yet-to-be-done changes should be fairly discrete and localized.  New issues will be added to track thses additional required changes : Manual testing done to verify basic operations work in 'standard' situtations.  No automated tests have been written, and there has not been thorough manual testing of edge cases.  Several bugs were found and corrected during a group manual testing session. : http://cakehat.cs.brown.edu/foodcritic/r/199/